[package]
name = "pages"
version = "0.1.0"
description = "A dynamically-sized heap-backed data page. Comprises a user-chosen header and data array packed into a single allocation."
keywords = []
categories = ["data-structures", "no-std", "rust-patterns"]
authors = ["James Laver <james.laver@gmail.com>"]
homepage = "https://github.com/irrustible/pages"
repository = "https://github.com/irrustible/pages"
documentation = "https://github.com/docs.rs/pages"
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"

[dependencies]
